recipe-cicd/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - recipes.mortenzwarenstein.nl
      secretName: recipes-tls
  rules:
    - host: recipes.mortenzwarenstein.nl
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: recipe-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-client
                port:
                  number: 80
